# pathfinder

./: .gitignore  .project  .travis.yml  3dastarattempt.rs  CHANGELOG.md  Cargo.toml  LICENSE  README.md  binding.gyp  build.rs  main.rs  package.json  path-finder.js  pathfinder.toml  setup.py
benches/: my_benchmark.rs
messages/: interop.proto  nsfw.proto  pathfinder.proto  service.proto  telemetry.proto
src/: .lib.rs.save.swp  .node.rs.swp  .obj.rs.swp  algorithm.rs  build.rs  debug.rs  graph.rs  lib.rs  lib.rs.save  lib.rs.save.1  location.cpp  location.h  main.rs  node.rs  obj.rs  obstacle.h  path_finder.cpp  path_finder.h  path_finder_wrapper.cpp  pathfinder.rs  point.rs  queue.rs  util.rs  waypoint.h  wrapper_util.cpp  wrapper_util.h
src/graph/: connection.rs  flyzones.rs  mod.rs  node.rs  point.rs  test.rs  util.rs  vertex.rs
src/gridstar/: config.rs  mod.rs
src/gridstar/grid/: mod.rs
src/process/: interop.rs  mod.rs  nsfw.rs  pathfinder.rs  process.rs  service.rs  telemetry.rs
src/tanstar/: config.rs  mod.rs  queue.rs  wrapper.rs
src/tanstar/graph/: connection.rs  flyzones.rs  mod.rs  node.rs  point.rs  test.rs  util.rs  vertex.rs
src/wrap/: pfwrapper.js
test/js/: test-adjust-path.js
tests/: conversion_test.rs  full_test.rs  full_test_0.rs  full_test_1.rs  full_test_2.rs  full_test_3.rs  full_test_4.rs  full_test_5.rs  full_test_6.rs  full_test_7.rs  util.rs
