[package]
name = "pathfinder"
version = "1.1.0"
authors = ["Steven Zhu <stevenzhu@utexas.edu>"]
license = "MIT"

[badges]
travis-ci = { repository = "uavaustin/pathfinder", branch = "master" }

[build-dependencies]
protoc-rust = "2.10.1"

[dependencies]
ordered-float = "1.0.1"
protobuf = "2.10.1"

[dev-dependencies]
rand = "0.5.1"
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt"]
