[package]
name = "pathfinder"
version = "1.1.0"
authors = ["Steven Zhu <stevenzhu@utexas.edu>"]
license = "MIT"

[badges]
travis-ci = { repository = "uavaustin/pathfinder", branch = "master" }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ordered-float = "1.0.1"
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"
#console_error_panic_hook = "0.1.6" # For debugging panicing errors
#web-sys = { version = "0.3.45", features = ["console"] } # For debugging info

[dev-dependencies]
rand = "0.5.1"
criterion = "0.2"
wasm-bindgen-test = "0.3.18"

[[bench]]
name = "my_benchmark"
harness = false

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt"]
